--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
+    "izitoast": "^1.4.0",
     "modern-normalize": "^3.0.1",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
+    "react-spinners": "^0.17.0",
+    "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
